--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,13 @@ label {
     /* border: 1px solid #ccc; */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+#popupScanning video{
+    width: 100%;
+    max-width: 480px;
+    height:200;
+}
+
+
 #closePopupScanner{
     width: 100%;
     background-color: #dc3545;
